force-app/main/default/objects/Integration_Transform__mdt/Integration_Transform__mdt.object-meta.xml
<CustomObject>
    <label>Integration Transform</label>
    <pluralLabel>Integration Transforms</pluralLabel>
    <description>Transformation rules for field values — date format, currency conversion, value mapping, custom Apex</description>
</CustomObject>