force-app/main/default/objects/Integration_Transform__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <type>Text</type>
    <length>255</length>
    <description>Custom transformer Apex class name (when Transform_Type__c = Custom)</description>
</CustomField>