force-app/main/default/objects/Integration_Transform__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON configuration for the transformation (e.g., date format strings, conversion rates)</description>
</CustomField>