force-app/main/default/objects/Integration_Transform__mdt/fields/Transform_Type__c.field-meta.xml
<CustomField>
    <fullName>Transform_Type__c</fullName>
    <label>Transform Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DateFormat</fullName><default>false</default><label>Date Format</label></value>
            <value><fullName>CurrencyConvert</fullName><default>false</default><label>Currency Convert</label></value>
            <value><fullName>ValueMap</fullName><default>false</default><label>Value Map</label></value>
            <value><fullName>Formula</fullName><default>false</default><label>Formula</label></value>
            <value><fullName>Concatenate</fullName><default>false</default><label>Concatenate</label></value>
            <value><fullName>Split</fullName><default>false</default><label>Split</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of transformation to apply</description>
</CustomField>